--- a/index.html
+++ b/index.html
@@ -118,18 +118,18 @@ const RARITY_INFO={N:{label:"ノーマル",color:"#8A8A8A",bg:"rgba(138,138,138,
 function getTodayMessage(typeId){
   const d=new Date();const seed=d.getFullYear()*10000+d.getMonth()*100+d.getDate();
   const msgs={
-    yume_kobuta:["ありのままの笑顔で、誰かの世界を変える者","素直さという最強の武器を、生まれながらに持つ者","嘘のつけない心が、本物だけを引き寄せる者","無邪気さの中に、誰も敵わない強さを秘める者"],
-    umi_rakko:["静かな水面の下に、誰より深い知恵を持つ者","急がないことで、誰より遠くへ辿り着く者","穏やかさという名の、壊れない盾を持つ者","自分のペースを守ることで、世界のペースを変える者"],
-    mori_risu:["好奇心という翼で、誰も知らない世界を先に見つける者","退屈を殺すために生まれた、永遠の探求者","情報という名の宝石を、誰より早く集める者","興味のままに動くことで、運命を引き寄せる者"],
-    hana_panda:["争いのない世界を、静かに、確実に作り上げる者","調和という魔法で、壊れた関係を修復する者","優しさの奥に、誰も折れない信念を隠し持つ者","すべてを受け入れる強さで、周りを救い続ける者"],
-    sora_unicorn:["普通という枠に収まることを、宇宙に許されなかった者","理想を現実に変える力を、生まれる前から授かった者","唯一無二であることが、使命であり宿命である者","平凡を拒む星の下に、選ばれて生まれた者"],
-    yuki_hakucho:["本物だけを見極める、研ぎ澄まされた審美眼の持ち主","孤独を恐れず、孤独に愛される、気高き存在","美しさという名の鎧で、繊細な心を守り抜く者","少数の深い絆だけで、世界を完成させられる者"],
-    niji_koala:["考えることをやめない脳で、世界の真理に近づく者","何もしない時間から、誰より多くを得る者","のんびりの仮面の下に、鋭い洞察力を隠す者","頑張らないという選択で、最大の成果を出す者"],
-    hi_no_tora:["炎のような情熱で、道なき道を焼き切って進む者","負けることを魂が許さない、生まれながらの戦士","弱さを見せない強さと、弱さを知っている優しさを持つ者","信念を曲げるくらいなら、すべてを敵に回す覚悟の者"],
-    tsuki_hyou:["感情に流されず、真実だけを見抜く冷静な目の持ち主","一歩引いた場所から、全体を支配する戦略家","ミステリアスなオーラの奥に、誰より熱い心を隠す者","本物を見極める力で、偽物の世界を静かに壊す者"],
-    hoshi_kuma:["守ることが使命であり、守ることが喜びである者","自分を犠牲にしてでも、大切な人を守り抜く者","包み込む力で、壊れかけた誰かを再生させる者","愛を与えすぎて、自分の分を忘れてしまう者"],
-    kaze_uma:["立ち止まることを許されない、永遠の旅人","自由という名の翼を、誰にも切らせない者","走り続けることでしか、本当の自分に出会えない者","退屈な世界に風穴を開けるために生まれた者"],
-    kaze_ookami:["群れることを捨て、真実だけを道連れにする者","一度信じた仲間のためなら、命すら賭けられる者","嘘と建前を見透かす、鋭すぎる直感の持ち主","孤独の中でしか磨かれない、本物の強さを知る者"]
+    yume_kobuta:["あなたの笑顔ひとつで、誰かの1日が救われてる。それがあなたの生きる意味。","素直に「好き」「楽しい」と言えるのは才能。その才能が周りの人の心を溶かしてる。","あなたがいるだけで場の空気が柔らかくなる。それって、お金じゃ絶対買えない力だよ。","誰かを笑わせたい、喜ばせたい。その衝動こそがあなたの人生を動かす最強のエンジン。"],
+    umi_rakko:["急がなくていい。あなたのペースで進んだ先に、誰より深くて美しい景色が待ってる。","「焦らない強さ」を持てる人はほとんどいない。あなたのその穏やかさが、誰かの支えになってる。","静かに寄り添える人がいるだけで、人は泣けるし、立ち直れる。あなたはその存在。","無理しなくても、あなたの居場所はちゃんとある。あなたがいるだけで十分価値がある。"],
+    mori_risu:["「なにそれ面白い！」って飛びつけるその好奇心が、あなたの人生を誰より豊かにしてる。","知りたい、見たい、やってみたい。その欲求の強さが、あなただけの道を切り拓く。","あなたが集めた知識や経験は、いつか誰かの人生を変えるヒントになる。それは確実。","新しいものに飛びつけるのは、勇気がある証拠。あなたの好奇心は、世界を広げる力。"],
+    hana_panda:["みんなが安心していられるのは、あなたがそこにいるから。それは目に見えない偉大な仕事。","争いを止められる人は、戦える人よりずっと強い。あなたはその強さを生まれ持ってる。","「あなたがいてくれてよかった」って一番言われるタイプ。それがあなたの存在価値そのもの。","誰かの気持ちに寄り添えるのは、あなた自身が深く感じる心を持ってるから。"],
+    sora_unicorn:["あなたの中にある「もっとこうなりたい」は、あなたにしか見えない未来が見えてる証拠。","普通でいられないのは、普通以上のことを成し遂げるために生まれてきたから。","あなたの理想を笑う人がいても気にしなくていい。その理想を実現する力をあなたは持ってる。","誰にも真似できない世界観がある。それはあなただけに与えられた、唯一無二の才能。"],
+    yuki_hakucho:["「本物じゃないと嫌」って思えるのは、あなたの感性が本物だから。妥協しなくていい。","ひとりの時間を楽しめる強さがある人だけが、本当に深い愛を知ることができる。","あなたの美意識は、周りの人の基準をそっと引き上げてる。気づいてないだけでちゃんと影響してる。","少ない関係を深く大切にできるあなたの愛情は、広く浅い100の関係より価値がある。"],
+    niji_koala:["あなたの「考える力」は、周りが気づけない本質を見抜く。その力が人を正しい方向に導く。","無理に頑張らなくても、あなたはあなたのままで十分すごい。その気づきが他の人も救う。","ふとした一言で核心をつけるのは、普段からずっと考え続けてるから。それは隠れた努力の証。","急がないあなたのペースが、結果的に一番遠くまで行ける。焦る必要はどこにもない。"],
+    hi_no_tora:["あなたの中に燃えてるその炎は、誰かが道に迷った時の灯台になる。消さないで。","全力でぶつかれる人は少ない。不器用でもまっすぐなあなたの生き方が、人の心を動かす。","弱さを知ってるから強くなれた。あなたの強さは、ハリボテじゃない本物の強さ。","「やる」と決めたら最後までやり切れるその力。それだけで、あなたの人生は絶対うまくいく。"],
+    tsuki_hyou:["冷静に全体を見渡せるあなたがいるから、周りは安心して挑戦できる。あなたは最強の司令塔。","感情に流されず本質を見抜けるのは、あなたにしかない特別な知性。もっと誇っていい。","簡単に心を開かないからこそ、あなたが信じたものは本物になる。その目は正しい。","戦略的に考えられる頭と、実は誰より熱い心。その組み合わせが最強だってこと、忘れないで。"],
+    hoshi_kuma:["あなたに「大丈夫？」って聞かれただけで救われた人が、今までに何人いると思う？","守りたいと思える人がいること、守る力があること。それだけであなたの人生には意味がある。","自分より他人を優先できるのは強さ。でもたまには自分を守って。あなたが元気なら、みんな元気。","あなたの温かさに触れた人は、その温かさを次の誰かに渡す。あなたが始まりなんだよ。"],
+    kaze_uma:["じっとしてられないのは、あなたの魂がもっと広い世界を知ってるから。走り続けて正解。","自由に生きることで、「自分もそうなりたい」って思う人が周りに増える。あなたは希望そのもの。","行動力だけで人生は変わる。あなたはその力を最大レベルで持ってる。どこまでも行ける。","退屈な毎日をぶっ壊せるのはあなただけ。あなたがいるだけで、世界はちょっと面白くなる。"],
+    kaze_ookami:["ひとりで立てる強さを持ってるからこそ、あなたが寄り添う時の温もりは特別。","嘘や建前を見抜ける目は、あなたが本物の関係だけを選んで生きてきた証。","孤独を恐れないあなたの強さに、密かに憧れてる人がたくさんいる。それは本当のこと。","信じた人のためなら何でもできる。その覚悟の深さが、あなたにしかない圧倒的な魅力。"]
   };
   const arr=msgs[typeId]||msgs.yume_kobuta;
   return arr[seed%arr.length];
@@ -451,8 +451,8 @@ function FortuneTypeCard({type,className=""}){
     <Card style={{textAlign:"left",marginBottom:10,background:"linear-gradient(135deg,rgba(232,98,124,0.04),rgba(176,138,207,0.04))"}}>
       <div style={{display:"flex",alignItems:"center",gap:8,marginBottom:10}}>
         <CharaAvatar id={type.id} size={32}/>
-        <div><p style={{fontSize:9,letterSpacing:3,color:"var(--t4)",textTransform:"uppercase",fontFamily:"Cormorant, serif"}}>your destiny</p>
-        <p style={{fontSize:11,fontWeight:700,color:type.color}}>{type.name}に定められた宿命</p></div>
+        <div><p style={{fontSize:9,letterSpacing:3,color:"var(--t4)",textTransform:"uppercase",fontFamily:"Cormorant, serif"}}>your mission</p>
+        <p style={{fontSize:11,fontWeight:700,color:type.color}}>{type.name}が持つ使命</p></div>
       </div>
       <p style={{fontSize:14,color:"var(--t1)",lineHeight:2,fontWeight:500}}>{todayMsg}</p>
     </Card>
