--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <meta name="twitter:image" content="https://yorunokotoba.vercel.app/ogp.png"/>
 <link rel="manifest" href="/manifest.json"/>
 <title>よるのことば</title>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W6JL87BZFX"></script>
-<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','G-W6JL87BZFX')</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8KMZJW6DR"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','G-Q8KMZJW6DR')</script>
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-messaging-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
